Socialnav mobile font alignment fixed

--- a/src/app/components/navbar/links/links.module.css
+++ b/src/app/components/navbar/links/links.module.css
@@ -40,3 +40,8 @@
       box-shadow: -4px 2px 5px 0px rgba(102,101,102,1);
     }
   }
+
+  .mobileSocialNav{
+    width: 100%;
+    padding: 5px;
+  }
