--- a/src/app/components/navbar/navbar.module.css
+++ b/src/app/components/navbar/navbar.module.css
@@ -16,6 +16,11 @@
     align-items: center;
 }
 
+/* .logoImg{
+    background-color: rgba(0, 0, 0, 0.50);
+    border-radius: 15px;
+    padding: 10px;
+} */
 
 @media (max-width: 640px){
     .navbar{
