--- a/src/app/components/social/social.module.css
+++ b/src/app/components/social/social.module.css
@@ -40,3 +40,9 @@
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+@media(max-width: 640px){
+    .contactNum p{
+        font-size: 20px;
+    }
+}
